--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,5 @@
 galaxy_info:
-  author: Itineris Limited
-  description: Sends a deployment complete message to a Slack channel when Trellis deploys Bedrock
-  company: Itineris Limited
+  description: Sends deployment notifications to a Slack before & after deploys via Trellis.
   license: MIT
   min_ansible_version: 2.6
   platforms:
