--- a/tasks/deploy_success.yml
+++ b/tasks/deploy_success.yml
@@ -1,7 +1,7 @@
 ---
 - name: Get slack & git user info
   set_fact:
-    target_env_url: "https://{{ project.site_hosts | map(attribute='canonical') | first }}|{{ env }}"
+    target_env_url: "https://{{ project.site_hosts | map(attribute='canonical') | first }}|{{ site }} {{ env }}"
     git_username: "{{ lookup('pipe', 'git config user.name') }}"
     using_github: "{{ project_git_repo.find('github') != -1 }}"
   ignore_errors: yes
@@ -17,7 +17,7 @@
   slack:
     token: "{{ slack_deploy_token }}"
     attachments:
-      - text: "*{{ git_username }}* successfully deployed *{{ site }}* to *<{{ target_env_url }}>* {% if using_github %} [<{{ github_commit_url }}|deployed commit>] {% else %} [{{ git_clone.after }}] {% endif %}"
+      - text: "*{{ git_username }}* deployed `{{ lookup('pipe', 'git branch --show-current') }}` branch to *<{{ target_env_url }}>* {% if using_github %} [<{{ github_commit_url }}|commit>] {% else %} [{{ git_clone.after }}] {% endif %}"
         color: good
   with_items: "{{ vault_wordpress_sites[site].slack_deploy_token }}"
   loop_control:
