--- a/tasks/deploy_start.yml
+++ b/tasks/deploy_start.yml
@@ -1,9 +1,17 @@
 ---
+- name: Set ENV & Git vars
+  set_fact:
+    git_username: "{{ lookup('pipe', 'git config user.name') }}"
+    branch_name: "{{ lookup('pipe', 'git branch --show-current') }}"
+    target_env_url: "https://{{ project.site_hosts | map(attribute='canonical') | first }}|{{ site }} {{ env }}"
+    ci_job_url: "{{ lookup('env', 'CI_JOB_URL') }}"
+  ignore_errors: yes
+
 - name: Send initial deployment notification to Slack
   slack:
     token: "{{ slack_deploy_token }}"
     attachments:
-      - text: "*{{ lookup('pipe', 'git config user.name') }}* deploying `{{ lookup('pipe', 'git branch --show-current') }}` branch to *<https://{{ project.site_hosts | map(attribute='canonical') | first }}|{{ site }} {{ env }}>*"
+      - text: "*{{ git_username }}* deploying `{{ branch_name }}` branch to *<{{ target_env_url }}>* {% if ci_job_url | length > 0 %}[<{{ ci_job_url }}|job>]{% endif %}"
         color: warning
   with_items: "{{ vault_wordpress_sites[site].slack_deploy_token }}"
   loop_control:
