--- a/tasks/deploy_start.yml
+++ b/tasks/deploy_start.yml
@@ -11,7 +11,7 @@
   slack:
     token: "{{ slack_deploy_token }}"
     attachments:
-      - text: "*{{ git_username }}* deploying `{{ branch_name }}` branch to *<{{ target_env_url }}>* {% if ci_job_url | length > 0 %}[<{{ ci_job_url }}|job>]{% endif %}"
+      - text: "*{{ git_username }}* deploying 🔀`{{ branch_name }}` to *<{{ target_env_url }}>* {% if ci_job_url | length > 0 %}[<{{ ci_job_url }}|🔎>]{% endif %}"
         color: warning
   with_items: "{{ vault_wordpress_sites[site].slack_deploy_token }}"
   loop_control:
