Allow customising the deploy messages
Rel: smithfield-studio/trellis-slack-deploy-notifications#7

--- a/tasks/deploy_start.yml
+++ b/tasks/deploy_start.yml
@@ -1,4 +1,8 @@
 ---
+- name: Load vars
+  include_vars:
+    file: "{{ playbook_dir }}/vendor/roles/slack-notify/vars/main.yml"
+
 - name: Set ENV & Git vars
   set_fact:
     git_username: "{{ lookup('pipe', 'git config user.name') }}"
@@ -11,8 +15,8 @@
   slack:
     token: "{{ slack_deploy_token }}"
     attachments:
-      - text: "*{{ git_username }}* deploying 🔀`{{ branch_name }}` to *<{{ target_env_url }}>* {% if ci_job_url | length > 0 %}[<{{ ci_job_url }}|🔎>]{% endif %}"
-        color: warning
+      - text: "*{{ git_username }}* {{ slack_notify_config.deploy_start_text }} `{{ branch_name }}` to *<{{ target_env_url }}>* {% if ci_job_url | length > 0 %}[<{{ ci_job_url }}|🔎>]{% endif %}"
+        color: "{{ slack_notify_config.deploy_start_colour }}"
   with_items: "{{ vault_wordpress_sites[site].slack_deploy_token }}"
   loop_control:
     loop_var: slack_deploy_token
