--- a/tasks/deploy_success.yml
+++ b/tasks/deploy_success.yml
@@ -1,4 +1,8 @@
 ---
+- name: Load vars
+  include_vars:
+    file: "{{ playbook_dir }}/vendor/roles/trellis-slack-deploy-notifications/vars/main.yml"
+
 - name: Set ENV & Git vars
   set_fact:
     git_username: "{{ lookup('pipe', 'git config user.name') }}"
@@ -27,8 +31,8 @@
   slack:
     token: "{{ slack_deploy_token }}"
     attachments:
-      - text: "*{{ git_username }}* deployed 🔀`{{ branch_name }}` to *<{{ target_env_url }}>* [{{ commit_sha }}]"
-        color: good
+      - text: "*{{ git_username }}* {{ slack_notify_config.deploy_success_text }} `{{ branch_name }}` to *<{{ target_env_url }}>* [{{ commit_sha }}]"
+        color: "{{ slack_notify_config.deploy_success_colour }}"
   with_items: "{{ vault_wordpress_sites[site].slack_deploy_token }}"
   loop_control:
     loop_var: slack_deploy_token
